[package]
name = "kiparse-rs"
version = "0.1.0"
authors = ["Elen Eisendle <ln@calcifer.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexpr = {path = "crates/lexpr-rs/lexpr", version = "0.2.5"}
serde = "1.0.116"
