[package]
name = "kiparse-rs"
version = "0.1.0"
authors = ["Elen Eisendle <ln@calcifer.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexpr = { version = "0.2.6" }

[patch.crates-io]
lexpr = { git = 'https://github.com/tachiniererin/lexpr-rs', branch = 'kicad_pcb-sexp' }
